@@ -7,7 +7,7 @@
     <script src="storm.js"></script>
     <script src="ui.js"></script>
     <script src="environment.js"></script>
-    <script src="env-defs.js"></script>
+    <script src="sim-mode-defs.js"></script>
     <script src="basin.js"></script>
     <script src="misc.js"></script>
     <script src="sketch.js"></script>
